Enable Nunita Sans font overall

--- a/book/index.html
+++ b/book/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="Serendipity Styx Blog System">
     <meta property="og:description" content="Serendipity Styx Edition, Styx Book, Styx Buch, The Book, Das Buch, Serendipity Book, Serendipity Buch, Individuelle Weblogs für Einsteiger und Profis, Styx is what Serendipity should be">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
-    <meta property="og:url" content="https://ophian.github.io/">
+    <meta property="og:url" content="https://ophian.github.io/book/">
 
     <!-- Enable responsiveness on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -21,12 +21,14 @@
     <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="/book/css/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
     <!-- CSS -->
+    <link rel="stylesheet" href="/book/css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
     <link rel="stylesheet" href="/css/libs.min.css">
     <link rel="stylesheet" href="/css/styx.min.css">
     <link rel="stylesheet" href="/book/css/book.min.css">
+
+    <!-- polyfills -->
     <script>
         // PLEASE better use Firefox or Chromium browsers !!
         if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
