--- a/hc/index.html
+++ b/hc/index.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="https://ophian.github.io/">
     <link rel="canonical" href="https://ophian.github.io/hc/">
     <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
     <link rel="stylesheet" href="/css/libs.min.css">
     <link rel="stylesheet" href="/css/styx.min.css">
 </head>
