Iconise and group repository sidebar and footer links

--- a/book/index.html
+++ b/book/index.html
@@ -258,6 +258,7 @@ if (document.readyState == "DOMContentLoaded") {
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx/releases" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Downloads</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Code</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Plugins</a></li>
+                        <li><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Issues</a></li>
                     </ul>
                 </div>
             </div>
@@ -280,7 +281,6 @@ if (document.readyState == "DOMContentLoaded") {
                         <li><a href="/contact">Contact us</a></li>
                         <li><a href="/hc">Help center</a></li>
                         <li><a href="/about">About Styx</a></li>
-                        <li><a href="https://github.com/ophian/styx/issues">GitHub Styx Issues</a></li>
                     </ul>
                 </div>
             </div>
@@ -295,6 +295,7 @@ if (document.readyState == "DOMContentLoaded") {
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx/releases" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Downloads</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Code</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Plugins</a></li>
+                        <li><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Issues</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
@@ -308,7 +309,6 @@ if (document.readyState == "DOMContentLoaded") {
                         <li><a href="/book">Serendipity Styx Book [de]</a></li>
                         <li><a href="/plugins">Serendipity Styx Plugins</a></li>
                         <li><a href="/themes">Serendipity Styx Themes</a></li>
-                        <li><a href="https://github.com/ophian/styx/issues">GitHub Styx Issues</a></li>
                     </ul>
                 </div>
             </div>
