--- a/themes/index.html
+++ b/themes/index.html
@@ -56,10 +56,10 @@
         </ul>
         <p class="site-nav__menu-category">Repository</p>
         <ul class="site-nav__menu" aria-label="links to styx repository pages">
-            <li class="site-nav__menu-item"><a href="https://github.com/ophian/styx" tabindex="-1" title="GitHub Serendipity Styx Code">Styx Code</a></li>
-            <li class="site-nav__menu-item"><a href="https://github.com/ophian/styx/releases" tabindex="-1" title="GitHub Serendipity Styx Releases">Styx Downloads</a></li>
-            <li class="site-nav__menu-item"><a href="https://github.com/ophian/additional_plugins" tabindex="-1" title="GitHub Serendipity Styx Plugins">Styx Plugins</a></li>
-            <li class="site-nav__menu-item"><a href="https://github.com/ophian/styx/issues" tabindex="-1" title="GitHub Serendipity Styx Issues">Styx Issues</a></li>
+            <li class="site-nav__menu-item"><a class="icon icon--small" href="https://github.com/ophian/styx" target="_blank" rel="noopener" tabindex="-1" title="GitHub Serendipity Styx Code"><svg class="icon__body"><use xlink:href="#github"></use></svg> Styx Code</a></li>
+            <li class="site-nav__menu-item"><a class="icon icon--small" href="https://github.com/ophian/styx/releases" target="_blank" rel="noopener" tabindex="-1" title="GitHub Serendipity Styx Releases"><svg class="icon__body"><use xlink:href="#github"></use></svg> Styx Downloads</a></li>
+            <li class="site-nav__menu-item"><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener" tabindex="-1" title="GitHub Serendipity Styx Plugins"><svg class="icon__body"><use xlink:href="#github"></use></svg> Styx Plugins</a></li>
+            <li class="site-nav__menu-item"><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener" tabindex="-1" title="GitHub Serendipity Styx Issues"><svg class="icon__body"><use xlink:href="#github"></use></svg> Styx Issues</a></li>
         </ul>
         <p class="site-nav__menu-category">Book</p>
         <ul class="site-nav__menu" aria-label="link book page">
@@ -386,6 +386,7 @@
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx/releases" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Downloads</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Code</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Plugins</a></li>
+                        <li><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Issues</a></li>
                     </ul>
                 </div>
             </div>
@@ -408,7 +409,6 @@
                         <li><a href="/contact">Contact us</a></li>
                         <li><a href="/hc">Help center</a></li>
                         <li><a href="/about">About Styx</a></li>
-                        <li><a href="https://github.com/ophian/styx/issues">GitHub Styx Issues</a></li>
                     </ul>
                 </div>
             </div>
@@ -423,6 +423,7 @@
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx/releases" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Downloads</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/styx" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Code</a></li>
                         <li><a class="icon icon--small" href="https://github.com/ophian/additional_plugins" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Plugins</a></li>
+                        <li><a class="icon icon--small" href="https://github.com/ophian/styx/issues" target="_blank" rel="noopener"><svg class="icon__body"><use xlink:href="#github"></use></svg> Serendipity Styx Issues</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
@@ -435,7 +436,6 @@
                         <li><a href="/blog">Serendipity Styx Blog</a></li>
                         <li><a href="/book">Serendipity Styx Book [de]</a></li>
                         <li><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li><a href="https://github.com/ophian/styx/issues">GitHub Styx Issues</a></li>
                     </ul>
                 </div>
             </div>
