Iconise site links in sidebar and footer

--- a/hc/index.html
+++ b/hc/index.html
@@ -132,12 +132,12 @@
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-1">
                     <h2 id="menu-category-1-1">Site & Documentation</h2>
                     <ul class="footer-menu">
-                        <li><a href="/">Serendipity Styx Home</a></li>
-                        <li><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li><a href="/themes">Serendipity Styx Themes</a></li>
-                        <li><a href="/hc/en/faq">Serendipity Styx FAQ</a></li>
+                        <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
+                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/hc/en/faq">Serendipity Styx FAQ</a></li>
                     </ul>
                 </div>
             </div>
@@ -145,8 +145,8 @@
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-2">
                     <h2 id="menu-category-1-2">Connect with Styx</h2>
                     <ul class="footer-menu">
-                        <li><a href="/contact">Contact us</a></li>
-                        <li><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/contact">Contact us</a></li>
+                        <li class="icon-site"><a href="/about">About Styx</a></li>
                     </ul>
                 </div>
             </div>
@@ -167,13 +167,13 @@
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
                     <h2>Connect with Styx</h2>
                     <ul class="footer-mobile__menu">
-                        <li><a href="/contact">Contact us</a></li>
-                        <li><a href="/about">About Styx</a></li>
-                        <li><a href="/">Serendipity Styx Home</a></li>
-                        <li><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li><a href="/themes">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/contact">Contact us</a></li>
+                        <li class="icon-site"><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
+                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
                     </ul>
                 </div>
             </div>
