Add Spartacus navigator

--- a/themes/index.html
+++ b/themes/index.html
@@ -79,13 +79,17 @@
         <div class="col">
             <div class="col-menu__wrapper col-menu__wrapper--spartacus">
                 <nav class="col-menu col-menu-spartacus" role="navigation" aria-label="Spartacus Themes sidebar list">
+                    <h3>Spartacus</h3>
+                    <ul>
+                        <li><a href="../plugins">Plugins</a></li>
+                        <li>&nbsp;</li>
+                    </ul>
+
                     <h3>Themes</h3>
 
                     <ul class="spartacus-list">
                         <li><a href="#all">All Templates</a></li>
                         <li><a href="#spafrothe">All Additional Templates</a></li>
-                        <li>&nbsp;</li>
-                        <li><a href="/plugins">Spartacus Plugins</a></li>
                         <li>&nbsp;</li>
                         <h4>[A-Z]</h4>
                         <li><a href="#1024px">1024px v1.1 (2009-08-16)</a></li>
