--- a/plugins/index.html
+++ b/plugins/index.html
@@ -79,6 +79,12 @@
         <div class="col">
             <div class="col-menu__wrapper col-menu__wrapper--spartacus">
                 <nav class="col-menu col-menu-spartacus" role="navigation" aria-label="Spartacus Plugins sidebar list">
+                    <h3>Spartacus</h3>
+                    <ul>
+                        <li><a href="../themes">Themes</a></li>
+                        <li>&nbsp;</li>
+                    </ul>
+
                     <h3>Plugins</h3>
 
                     <h4>Event</h4>
@@ -117,10 +123,6 @@
                         <li><a href="#sbgroup_IMAGES">Images</a></li>
                         <li><a href="#sbgroup_STATISTICS">Statistics</a></li>
                     </ul>
-
-                    <p>&nbsp;</p>
-
-                    <h4><a href="/themes">Spartacus Themes</a></h4>
                 </nav>
             </div>
             <div class="col-document__wrapper col-document__wrapper--spartacus">
