hc: Fixup markup plugins

--- a/hc/en/markup-plugins.html
+++ b/hc/en/markup-plugins.html
@@ -112,11 +112,11 @@
 
                     <h3 id="docs-standard-s9y-markup-plugins">Standard Serendipity Markup Plugins</h3>
 
-                    <p>If you use a WYSIWYG-Editor lieke the CKEditor you don't need to care about markup. It is done and stored for you.</p>
+                    <p>If you use a <strong>WYSIWYG-Editor</strong> like the CKEditor you don't need to care about setting any markup options. This is automatically done for you.</p>
 
                     <h4 id="docs-nl2br">nl2br</h4>
 
-                    <p>The nl2br plugin is enabled by default in new Serendipity blogs. It converts newlines (nl) to break tags (<code>&lt;br /&gt;</code>) in entries and comments. Whenever you press the “Enter” key on your keyboard, you’re adding a newline to your entry; it looks like you’ve ended the current line and started a new line.</p>
+                    <p>The nl2br plugin <em>‹ read: nl to br ›</em> is enabled by default in new Serendipity blogs. It converts newlines (nl) to break tags (<code>&lt;br /&gt;</code>) in entries and comments. Whenever you press the “Enter” key on your keyboard, you’re adding a newline to your entry; it looks like you’ve ended the current line and started a new line.</p>
 
                     <p>HTML usually treats these newlines as if they were whitespace, converting any number of them to a single space. (For the grammatically inclined, this is why your sentences are all followed by a single space instead of two: HTML interprets any number of spaces as a single space.) To get a new line, you must enter a <code>&lt;p&gt;</code> or <code>&lt;br /&gt;</code> tag.</p>
 
@@ -146,23 +146,23 @@
 
                     <p>This will turn some of the more common smilies/emoticons into images, which images it turns them into depends on which template you have selected. The emoticons it uses are:</p>
 
-                    <pre><code>**Similey** | **Image file**
+                    <pre><code>‹ Smiley › | ‹ Image file ›
 ----------- | -------------
-:'( | cry\_smile.gif
-:-) | regular\_smile.gif
-:-O | embaressed\_smile.gif
-:O' | embaressed\_smile.gif
-:-( | sad\_smile.gif
-:(  | sad\_smile.gif
-:)  | regular\_smile.gif
-8-) | shades\_smile.gif
-:-D | teeth\_smile.gif
-:D  | teeth\_smile.gif
-8)  | shades\_smile.gif
-:-P | tounge\_smile.gif
-;-) | wink\_smile.gif
-;)  | wink\_smile.gif
-:P  | tounge\_smile.gif</code></pre>
+:'( | cry_smile.gif
+:-) | regular_smile.gif
+:-O | embaressed_smile.gif
+:O' | embaressed_smile.gif
+:-( | sad_smile.gif
+:(  | sad_smile.gif
+:)  | regular_smile.gif
+8-) | shades_smile.gif
+:-D | teeth_smile.gif
+:D  | teeth_smile.gif
+8)  | shades_smile.gif
+:-P | tounge_smile.gif
+;-) | wink_smile.gif
+;)  | wink_smile.gif
+:P  | tounge_smile.gif</code></pre><br>
 
                     <h4 id="docs-s9y-markup">Serendipity Markup</h4>
 
@@ -173,7 +173,7 @@ _underlined text_
 ^superscript text^
 @subscript text@
 |xxxxxx|Font color change, where xxxxxx is a hex code|
-#yyy# embeds #yyy# as an html entity, (#gt#, #lt# and #amp# for instance)</code></pre>
+#yyy# embeds #yyy# as an html entity, (#gt#, #lt# and #amp# for instance)</code></pre><br>
 
                     <h4 id="docs-markdown">MarkDown</h4>
 
